ADD - src/data/allProjects.json : ajout de la To Do List

--- a/src/data/allProjects.json
+++ b/src/data/allProjects.json
@@ -93,5 +93,24 @@
       "skill": [
         "Front"
       ]
+    },
+    {
+      "illustration": null,
+      "title": "To Do List",
+      "link": [
+        "https://jessya.promo-159.codeur.online/todolist/",
+        "To Do List"
+      ],
+      "github": false,
+      "text": "Réalisation des scripts afin de rendre fonctionnelle une To Do List déjà intégrée.",
+      "frontendmentor": false,
+      "lang": [
+        "PHP",
+        "JavaScript",
+        "MySQL"
+      ],
+      "skill": [
+        "Back"
+      ]
     }
 ]
