--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,4 @@
 REACT_APP_SOCIALS_GITHUB=https://github.com/
 REACT_APP_SOCIALS_LINKEDIN=https://www.linkedin.com/
 REACT_APP_SOCIALS_INSTAGRAM=https://instagram.com/
+REACT_APP_URL=https://jd25.fr/
