ADD - .env.example : Ajout d'un variable pour stocker l'hébergeur du site

--- a/.env.example
+++ b/.env.example
@@ -2,3 +2,4 @@ REACT_APP_SOCIALS_GITHUB=https://github.com/
 REACT_APP_SOCIALS_LINKEDIN=https://www.linkedin.com/
 REACT_APP_SOCIALS_INSTAGRAM=https://instagram.com/
 REACT_APP_URL=https://jd25.fr/
+REACT_APP_HOSTING=OVH
