ADD - composer.json : Installation de phpdotenv

--- a/composer.json
+++ b/composer.json
@@ -3,5 +3,8 @@
         "platform": {
             "php": "8.0.28"
         }
+    },
+    "require": {
+        "vlucas/phpdotenv": "^5.5"
     }
 }
