ADD - .env : Création de variable pour le destinataire du formulaire de contact

--- a/.env.example
+++ b/.env.example
@@ -3,3 +3,5 @@ REACT_APP_SOCIALS_LINKEDIN=https://www.linkedin.com/
 REACT_APP_SOCIALS_INSTAGRAM=https://instagram.com/
 REACT_APP_URL=https://jd25.fr/
 REACT_APP_HOSTING=OVH
+CONTACT_NAME=Jessy-Daniel
+CONTACT_MAIL=example@email.com
