--- a/public/.htaccess
+++ b/public/.htaccess
@@ -1,3 +1,12 @@
+RewriteEngine On
+
+# Rediriger le HTTP www vers le non-www
+RewriteCond %{HTTP_HOST} ^www\.(.*)$ [NC]
+RewriteRule ^(.*)$ https://%1%{REQUEST_URI} [R=301,L,NE]
+
+RewriteCond %{HTTPS} off
+RewriteRule ^(.*)$ https://%{HTTP_HOST}%{REQUEST_URI} [L,NE,R=301]
+
 <IfModule mod_rewrite.c>
   RewriteEngine On
   RewriteBase /
