ADD - .env : Ajout de variable pour l'expéditeur du formulaire de contact

--- a/.env.example
+++ b/.env.example
@@ -5,3 +5,5 @@ REACT_APP_URL=https://jd25.fr/
 REACT_APP_HOSTING=OVH
 CONTACT_NAME=Jessy-Daniel
 CONTACT_MAIL=example@email.com
+REACT_APP_SENDER_NAME=J-D25
+REACT_APP_SENDER_MAIL=contact@jd25.fr
